added projects form and new actions/view. added simple form and wysihtml5.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,13 @@
 @import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+// sass files
 @import "header";
 @import "landing";
 @import "projects";
 @import "settings";
 @import "variables";
+
+// wysiwyg bootstrap
+@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
