--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,16 +1,18 @@
 <div class="col-md-4 col-sm-6 col-xs-12">
 
   <div class="project-box">
-    <img src="http://images.freeimages.com/images/previews/5b0/rubik-s-cube-1-1424892.jpg" alt="..." width="100%" height="200px">
+    <!--img src="http://images.freeimages.com/images/previews/5b0/rubik-s-cube-1-1424892.jpg" alt="..." width="100%" height="200px"-->
+    <%= link_to image_tag(project.image_url, alt: project.name, width: '100%', height: '200px'), "#" %>
     <div class="description-box">
 
       <!-- Project Title -->
       <div class="title">
+      	<%= link_to project.name, "#" %>
 	  </div>
 
 	  <!-- Project Description -->
 	  <div class="description">
-	    This is a description
+	    <%= project.description %>
 	  </div>
 
 	  <!-- Project Progress Bar -->
