--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -7,7 +7,7 @@
 
       <!-- Project Title -->
       <div class="title">
-      	<%= link_to project.name, "#" %>
+      	<%= link_to project.name, '#' %>
 	  </div>
 
 	  <!-- Project Description -->
